--- a/src/components/map-section.css
+++ b/src/components/map-section.css
@@ -19,26 +19,29 @@
 /* ===== ส่วนชื่อ Name-section (แถวบนสุด) ===== */
 .Nameoffense-section {
   flex: 1;
-  background-color: #b40000;
+  background-color: #6b0101;
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  border-bottom: 2px solid #d79f04;
   overflow: hidden;
+  border-right: 3px solid rgb(0, 0, 0);
+  border-bottom: 3px solid rgb(0, 0, 0);
+  color: #ffffff;;
 }
 
 .Namedefense-section {
   flex: 1;
-  background-color: #bbdefb;
+  background-color: #000864;
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  border-bottom: 2px solid #2196f3;
   overflow: hidden;
   font-size: 1.1rem;
-  color: #0d47a1;
+  color: #ffffff;
+  border-left: 3px solid rgb(0, 0, 0);
+  border-bottom: 3px solid rgb(0, 0, 0);
 }
 
 /* ===== ส่วน Map แบ่งเป็น 2 ฝั่ง (แถวล่าง) ===== */
@@ -54,12 +57,12 @@
 .offense-map {
   flex: 1;
   background-color: #ffebeb;
-  border-right: 3px solid #f44336;
+  border-right: 3px solid rgb(0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  color: #b71c1c;
+  color: #d33535;
   width: 100%;
   height: 100%;
 }
@@ -67,8 +70,8 @@
 /* ===== ฝั่งขวา Defense Map (50%) ===== */
 .defense-map {
   flex: 1;
-  background-color: #e3f2fd;
-  border-left: 3px solid #2196f3;
+  background-color: #000864;
+  border-left: 3px solid rgb(0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: center;
